fix horz scrollbars showing on watch area list

--- a/src/static/example_bootstrap.less
+++ b/src/static/example_bootstrap.less
@@ -544,7 +544,8 @@ label.checkbox {
       right: 0;
       bottom: 0;
       left: 0;
-      overflow: scroll;
+      overflow-x: visible;
+      overflow-y: auto;
       z-index: 1100;
       li {
         cursor: pointer; 
